--- a/jenkins-slave-image/Dockerfile
+++ b/jenkins-slave-image/Dockerfile
@@ -1,4 +1,7 @@
 FROM    jenkinsci/slave:alpine
 USER    root 
-RUN     apk add docker
+RUN     addgroup -g 3000 docker && \
+        apk add docker && \
+        apk add git && \ 
+        addgroup jenkins docker
 USER    jenkins 
